# easy-logging

./: README.md  pyproject.toml
src/easy_logging/: __init__.py  config.py  formatter.py
tests/: conftest.py  test_config.py  test_formatter.py
