[project]
name = "easy-formatter"
version = "0.1.0"
description = "An easy, customizable formatter for Python logging"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14.4",
	"pytest>=7.4.0",
	"pytest-cov>=4.1.0",
	"pytest-mock>=3.11.1",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
[tool.coverage.report]
exclude_also = [
	"if 0:",
    "if __name__ == .__main__.:",
	"import",
	"from",
]

[tool.ruff.lint]
exclude = [".venv", "main.py"]
select = ["E", "F", "W", "C90", "B", "B9", "ANN", "COM", "D", "ERA", "ISC", "N", "Q000", "S", "SIM", "TID251", "UP", "YTT", "T"]
ignore = [
	"D203",  # incorrect-blank-line-before-class
	"D213",  # multi-line-summary-second-line
	"D301",  # Use r""" if any backslashes in a docstring
	"S311",  # random-module
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Use of assert detected
	"D100",    # Missing docstring in public module
	"D104",    # Missing docstring in public package
]